--- a/_posts/2025-1-23-PINN01.md
+++ b/_posts/2025-1-23-PINN01.md
@@ -54,7 +54,7 @@ $$
 这里 Borundary Loss 为：
 
 $$
-\mathcal{L}_b(\mathbf{\theta}) = \sum_k \frac{\lambda_{b_k}}{N_{b_k}} \sum_{j=1}^{N_{b_k}} \| \mathcal{B}_k[N(\mathbf{x}_{k,j};\mathbf{\theta})] - g_k (\mathbf{x}_{k,j}) \|
+\mathcal{L}_b(\mathbf{\theta}) = \sum_k \frac{\lambda_{b_k}}{N_{b_k}} \sum_{j=1}^{N_{b_k}} \| \mathcal{B}_k[N(\mathbf{x}_{k,j};\mathbf{\theta})] - g_k (\mathbf{x}_{k,j}) \|^2
 $$
 
 其中，$\lambda_{b_k}$ 为每一个边界条件的系数，其为训练时的超参，$N_{b_k}$ 为落在第 $k$ 个边界条件上的点的总数，$\mathbf{x}_{k,j}$ 为在第 $k$ 个边界条件的第 $j$ 个点. 简而言之，就是网络在边界处各点的根据边界条件计算出的值和实际的值的均方误差（MSE）
@@ -62,7 +62,7 @@ $$
 Data Loss 定义为：
 
 $$
-\mathcal{L}_d(\mathbf{\theta}) = \frac{1}{N_d} \sum_{k=1}^{N_d} \| N(\mathbf{x}_k;\mathbf{\theta}) - \mathbf{u}_k \|
+\mathcal{L}_d(\mathbf{\theta}) = \frac{1}{N_d} \sum_{k=1}^{N_d} \| N(\mathbf{x}_k;\mathbf{\theta}) - \mathbf{u}_k \|^2
 $$
 
 其中，$N_d$ 为数据的总数，$\mathbf{u}_k$ 则为在对应点 $\mathbf{x}_k$ 的已知数据（其一般来源于实验测量计算或传统的数值计算方法）。
@@ -74,7 +74,7 @@ $$
 Physics Loss 定义为：
 
 $$
-\mathcal{L}_p (\mathbf{\theta}) = \frac{1}{N_p} \sum_{k=1}^{N_p} \| \mathcal{D}[N(\mathbf{x}_k;\mathbf{\theta})] - f(\mathbf{x}_k) \|
+\mathcal{L}_p (\mathbf{\theta}) = \frac{1}{N_p} \sum_{k=1}^{N_p} \| \mathcal{D}[N(\mathbf{x}_k;\mathbf{\theta})] - f(\mathbf{x}_k) \|^2
 $$
 
 可以看见，无论是哪一种 Loss，其都是均方误差（MSE）的形式。一个研究方向是尝试去研究是否有更好的 Loss 构造方式。另外，在 Borundary Loss（这里只针对 Neumann 边界条件和 Robin 边界条件）和 Physics Loss 中，其偏导数的计算常常直接通过现代神经网络库的自动微分实现，从而避免了人工繁琐的推导。
