--- a/_posts/2025-03-20-Pappus.md
+++ b/_posts/2025-03-20-Pappus.md
@@ -77,4 +77,52 @@ $\mathbf{Question}.$ 求解一个匀质的半径为 $R$ 半圆弧的质心位置
 
 $\mathbf{Solve}.$ 首先我们将半圆弧的圆心放在原点，将直径与 $x$ 轴重合，并将半圆弧放在 $y$ 轴正半轴的区域. 
 
-显然，根据半圆弧的对称性，半圆弧的质心的 $x$ 坐标为 $0$. 设半圆弧的质心的 $y$ 坐标为 $y$，半圆弧绕 $x$ 轴旋转，旋转一圈质心运动的路程为 $S = 2 \pi y$，旋转一圈形成一个球面，因此，根据 Pappus 定理，有：
+显然，根据半圆弧的对称性，半圆弧的质心的 $x$ 坐标为 $0$. 设半圆弧的质心的 $y$ 坐标为 $y$，半圆弧绕 $x$ 轴旋转，旋转一圈质心运动的路程为 $2 \pi y$，旋转一圈形成一个球面，因此，根据 Pappus 定理，有：
+
+$$ S = 4 \pi R^2 = \pi R \cdot 2 \pi y $$
+
+解得：
+
+$$ y = \frac{2 R}{\pi} $$
+
+综上，我们可以得到半圆弧的质心的坐标为：$(0, \frac{2 R}{\pi})$
+
+### 求解半圆形薄板质心
+
+$\mathbf{Question}.$ 求解一个半径为 $R$ 的匀质半圆形薄板的质心位置.
+
+$\mathbf{Solve}.$ 首先，我们半圆形薄板放在原点，将直径与 $x$ 轴重合，并将半圆形薄板放在 $y$ 轴正半轴的区域.
+
+显然，根据半圆形薄板的对称性，半圆形薄板的质心的 $x$ 坐标为 $0$. 设半圆形薄板的质心的 $y$ 坐标为 $y$，半圆形薄板绕 $x$ 轴旋转，旋转一圈质心运动的路径为 $2 \pi y$，旋转一圈形成一个球体，因此，根据 Pappus 定理，有：
+
+$$ V = \frac{4}{3} \pi R^3 = \frac{1}{2} \pi R^2 \cdot 2 \pi y $$
+
+解得：
+
+$$ y = \frac{4R}{3\pi} $$
+
+综上，我们可以得到匀质半圆形薄板的质心位置为：$(0, \frac{4R}{3\pi})$
+
+### 求解匀质直角三角形薄板的质心
+
+$\mathbf{Question}.$ 求解一个两个直角边分别为 $a$ 和 $b$ 的匀质直角三角形薄板的质心位置.
+
+$\mathbf{Solve}.$ 首先，我们将直角三角形放在原点，并将其两个直角边放在 $x$ 轴正半轴和 $y$ 轴正半轴上. 不失一般性，我们将边长为 $a$ 的边放在 $x$ 轴正半轴上，将边长为 $b$ 的边放在 $y$ 轴正半轴上，即 $(0,0) - (a,0) - (0,b)$ 为所求要求质心的直角三角形.
+
+设质心位置为 $(x,y)$，让直角三角形绕 $x$ 轴旋转，形成一个锥体，根据 Pappus 定理，有：
+
+$$ V = \frac{1}{3} \pi b^2 a = 2 \pi y \cdot \frac{1}{2} ab $$
+
+解得：
+
+$$ y = \frac{b}{3} $$
+
+同理，我们可以让三角形绕 $y$ 轴旋转，同样形成一个锥体，根据 Pappus 定理，有:
+
+$$ V = \frac{1}{3} \pi a^2 b = 2 \pi x \cdot \frac{1}{2} ab $$
+
+解得：
+
+$$ x = \frac{a}{3} $$
+
+综上，我们可以得到质心的位置为：$(\frac{a}{3}, \frac{b}{3})$
