--- a/_posts/2025-03-20-Pappus.md
+++ b/_posts/2025-03-20-Pappus.md
@@ -49,7 +49,7 @@ $$ \bar{y} = \frac{1}{L} \int_C y \, \mathrm{d}s $$
 
 $$ S = L \cdot 2\pi \bar{y} $$
 
-$\square$
+证毕，$\square$
 
 **体积定理**
 
@@ -65,7 +65,7 @@ $$ \bar{y} = \frac{1}{A} \int_D y \, \mathrm{d}A $$
 因此：
 $$ V = A \cdot 2\pi \bar{y} $$
 
-$\square$
+证毕，$\square$
 
 ## 应用举例
 
