--- a/_posts/2025-03-20-Pappus.md
+++ b/_posts/2025-03-20-Pappus.md
@@ -139,6 +139,10 @@ $$ V = \pi R^2 \cdot 2 \pi R = 2 \pi^2 R^3 $$
 
 ## 有关 Pappus 定理的小问题
 
-在前文的 Pappus 的介绍中，我们着重强调了旋转轴不会穿过曲线或平面区域这一条件. 但实际上 Pappus 定理中的体积 $V$ 是有向体积. 若旋转轴穿过曲线或平面区域，则轴将图形分成了左右两侧，左右两侧的旋成的面积或体积其符号**相反**.
+在前文的 Pappus 的介绍中，我们着重强调了旋转轴不会穿过曲线或平面区域这一条件. 如果我们不考虑这个条件，就会出现一些荒谬的结果.
+
+考虑如下简单的情形：一个圆形绕着他的一条直径转半圆，质心（也就是圆心）走过的路径为 $0$，若仍旧按照 Pappus 定理，则有旋成的球体的体积为 $0$，显然，这是不合理的.
+
+实际上 Pappus 定理的证明中，体积 $V$ 是有向体积. 若旋转轴穿过曲线或平面区域，则轴将图形分成了左右两侧，左右两侧的旋成的面积或体积的符号**相反**. 换句话说，若转轴穿过了曲线或平面区域，就必须考虑符号问题，转轴质心所在侧，其体积为正，对侧体积为负.
 
 当然，只要我们将轴设在曲线或面的的外面，就不需要考虑正负号的问题.
