--- a/_posts/2025-3-22-变质量的两种情况.md
+++ b/_posts/2025-3-22-变质量的两种情况.md
@@ -80,4 +80,4 @@ $v\frac{\mathrm{d}m}{\mathrm{d}t}$ 这一项.
 
 这里提到的两个模型在计算单摆的**浸渐不变量**中会带来除了质量增加和质量损失的区别外的其他区别.
 这里暂且不继续说明，可能之后单开一篇文章进一步阐述.
-*总之，对于一个质量变化的问题，我们往往需要仔细考察质量变化的具体过程，直接诶套用一些现有的结论往往会带来错误..*
+*总之，对于一个质量变化的问题，我们往往需要仔细考察质量变化的具体过程，直接套用一些现有的结论往往会带来错误..*
