--- a/_posts/2025-4-20-不同参考系下的能量变化问题.md
+++ b/_posts/2025-4-20-不同参考系下的能量变化问题.md
@@ -29,7 +29,7 @@ $1/3$.
 $2v_{0}$ 再加速到 $3v_{0}$，从而类似 A
 的计算，得到汽车第一阶段消耗的汽油是第二阶段的：
 
-$$\frac{(3v_{0})^{2}-(2v_{0})^{2}}{(2v_{0})^{2}-v_{0}^{2}}=5/3$$
+$$\frac{(2v_{0})^{2}-v_{0}^{2}}{(3v_{0})^{2}-(2v_{0})^{2}}=\frac{3}{5}$$
 
 倍，从而与 A 的结论矛盾. 那么，A 与 B 的结论谁对？如何解释这种情况？
 
