--- a/_posts/2025-4-30-电磁场低速下换系问题.md
+++ b/_posts/2025-4-30-电磁场低速下换系问题.md
@@ -82,8 +82,9 @@ $$\begin{aligned}
 在原题中，记地面系为 $G$,同两个点电荷共同运动的惯性系为 $S$，在 $S$
 中，一个点电荷到另外一个点电荷之间的电场强度为：
 
-$$E_{Sy}=\frac{1}{4\pi\varepsilon_{0}}\frac{q}{L^{2}}$$ 因此在 $S$
-系两个点电荷之间的受力为：
+$$E_{Sy}=\frac{1}{4\pi\varepsilon_{0}}\frac{q}{L^{2}}$$
+
+因此在 $S$ 系两个点电荷之间的受力为：
 
 $$F_{S}=\frac{q^{2}}{4\pi\varepsilon_{0}}$$
 
