--- a/_posts/2023-7-20-指标法.md
+++ b/_posts/2023-7-20-指标法.md
@@ -25,9 +25,7 @@ tags:
 
 3.  一般拉丁字母（$i,j,k$等）认为可取$1,2,3$，而希腊字母（$\mu,\nu,\rho$等）认为可取$0,1,2,3$或者$1,2,3,4$. 
 
-### 例子
-
-#### 向量的指标表示
+### 向量的指标表示
 
 向量$\boldsymbol{a}=a_1 e^1 + a_2 e^2 + a_3 e^3$可表示为
 
@@ -39,7 +37,7 @@ $$\boldsymbol{a} = \sum^3_{i=1} a_i e^i$$
 
 其中$e^1,e^2,e^3$表示三维空间的三个**基**（basis），它们是线性无关的. 这与前面的$a_i$不同，其不再是实数，故将其指标放在右上角凸显其不同. 
 
-#### 矩阵的表示
+### 矩阵的表示
 
 对于一个矩阵
 
@@ -52,7 +50,7 @@ $$A =
 
 可用求和约定简记为$A_{ij}$
 
-#### 方程的表示
+### 方程的表示
 
 对于一个三元一次线性方程组
 
