--- a/_posts/2025-5-25-热力学与微分形式.md
+++ b/_posts/2025-5-25-热力学与微分形式.md
@@ -131,7 +131,7 @@ $$\mathrm{d}U=T\mathrm{d}S-p\mathrm{d}V$$
 
 -   Gibbus 自由能：$\mathrm{d}G=-S\mathrm{d}T+V\mathrm{d}p$.
 
-# 偏导数关系
+## 偏导数关系
 
 这里，我们设
 $T=T\left(p,S\right),S=S\left(p,T\right),p=p\left(S,T\right)$，因此，我们有：
