--- a/_posts/2025-6-21-浅谈牛顿第二定律.md
+++ b/_posts/2025-6-21-浅谈牛顿第二定律.md
@@ -62,7 +62,7 @@ $$\begin{aligned}
 不难发现，无论 $n$ 等于多少，式子中的积分项的被积函数（$\boldsymbol{v},\boldsymbol{a},\boldsymbol{a}^{\prime},\dots$）均是独立的，必须通过外部的约束才能给出，无法形成封闭的理论.
 为解决这个问题，我们可以引入场论的方法.
 
-# 场与源
+## 场与源
 
 根据
 
