--- a/_posts/2025-6-23-从零开始的Maxwell方程组.md
+++ b/_posts/2025-6-23-从零开始的Maxwell方程组.md
@@ -41,7 +41,7 @@ $\phi\in\Omega^{0}$，因此存在"保维微分"给定的一个标量场：
 
 $$\rho\equiv\Delta\phi\in\Omega^{0}$$
 
-上即荷密度.
+上式即荷密度.
 
 由于标量场
 $\phi\in\Omega^{0}$，因此我们只能作"升维微分"，从而定义场强（这里的符号是为了遵从物理的方向，即场的方向是从势能高指向势能低，只是一个正方向的定义问题）：
