--- a/_posts/2025-6-30-NBody宇宙学模拟.md
+++ b/_posts/2025-6-30-NBody宇宙学模拟.md
@@ -322,7 +322,7 @@ $\mathrm{d}\boldsymbol{v}/\mathrm{d}a$，PM
 
 4.  **力插值**：将网格点上的引力场插值到每个粒子的实际位置.
 
-#### 质量分配
+**质量分配**
 
 PM
 法需要通过傅里叶变换来加速，而在计算机计算中，我们只能对一个网格进行傅里叶变换，因此我们需要将位置随意的粒子分配到网格上.
@@ -355,7 +355,7 @@ $$w_{i}=1-\frac{x_{p}-x_{i}}{L}\quad w_{i+1}=\frac{x_{p}-x_{i}}{L}$$
 
 在三维中，就是这三个方向权重的乘积.
 
-#### 泊松方程求解
+**泊松方程求解**
 
 获得网格上的密度场 $\rho$ 后，将其转化为微扰场
 $\delta$，下一步是求解方程
@@ -381,7 +381,7 @@ $\Phi\left(\boldsymbol{x}\right)$.
 在实际计算中，我们使用**快速傅里叶变换（FFT）**算法来进行傅里叶变换，其计算复杂度为
 $\mathcal{O}\left(N\log N\right)$.
 
-#### 引力计算
+**引力计算**
 
 得到了网格上的引力势 $\Phi\left(\boldsymbol{x}\right)$
 后，$\mathrm{d}\boldsymbol{v}/\mathrm{d}a$ 可以通过求其负梯度得到：
@@ -401,7 +401,7 @@ $$\left(\frac{\mathrm{d}v_{x}}{\mathrm{d}a}\right)\left(i,j,k\right)=-\frac{\Phi
 
 实际中可以使用更高精度的差分公式.
 
-#### 力插值
+**力插值**
 
 最后一步是将网格点上的引力插值到每个粒子所在的实际位置
 $\boldsymbol{x}_{p}$，得到作用在每个粒子上的引力
@@ -411,13 +411,13 @@ $\mathrm{d}\boldsymbol{v}_{p}/\mathrm{d}a$.
 方案进行力插值.
 
 设一个粒子 $p$ 位于
-$\bm{x}_{p}$，它被一个由8个网格点构成的立方单元所包围.
+$\boldsymbol{x}_{p}$，它被一个由8个网格点构成的立方单元所包围.
 我们在之前计算出了这 $8$ 个角点上的引力向量
-$\left(\mathrm{d}\bm{v}/\mathrm{d}a\right)_{i,j,k}$. 作用在粒子 $p$
-上的引力 $\left(\mathrm{d}\bm{v}/\mathrm{d}a\right)_{p}$ 就是这 $8$
+$\left(\mathrm{d}\boldsymbol{v}/\mathrm{d}a\right)_{i,j,k}$. 作用在粒子 $p$
+上的引力 $\left(\mathrm{d}\boldsymbol{v}/\mathrm{d}a\right)_{p}$ 就是这 $8$
 个网格点上引力的加权平均：
 
-$$\left(\frac{\mathrm{d}\bm{v}}{\mathrm{d}a}\right)_{p}=\sum_{l,m,n\in\{0,1\}}\left(\frac{\mathrm{d}\bm{v}}{\mathrm{d}a}\right)_{i+l,j+m,k+n}\cdot w_{i+l,j+m,k+n}$$
+$$\left(\frac{\mathrm{d}\boldsymbol{v}}{\mathrm{d}a}\right)_{p}=\sum_{l,m,n\in\{0,1\}}\left(\frac{\mathrm{d}\boldsymbol{v}}{\mathrm{d}a}\right)_{i+l,j+m,k+n}\cdot w_{i+l,j+m,k+n}$$
 
 这里的权重 $w$ 与质量分配的权重完全相同. 例如，对于一维情况，粒子在
 $x_{p}$ 处，其左右两个网格点为 $x_{i}$ 和
