--- a/_posts/2025-7-30-广义Taylor展开.md
+++ b/_posts/2025-7-30-广义Taylor展开.md
@@ -87,9 +87,7 @@ $$\omega\left(g-f\right)=\omega\left(g\right)-\omega\left(f\right)=0$$
 
 <div class="notice--info" markdown="1">
 $\mathbf{Lemma 2}:$
-$\forall f\in X$，有：
-
-$$f=\omega\left(f\right)+\mathrm{\mathcal{D}^{-1}\left(\mathcal{D}f\right)}$$
+$\forall f\in X$，有：$f=\omega\left(f\right)+\mathrm{\mathcal{D}^{-1}\left(\mathcal{D}f\right)}$
 </div>
 
 $\mathbf{Proof}.$ 不难注意到，$\forall f\in X$，总有：
@@ -123,16 +121,20 @@ $$g=\mathcal{D}^{-1}\left(\mathcal{D}g\right)$$
 $$\begin{aligned}
 f-\omega\left(f\right) & =\mathcal{D}^{-1}\left(\mathcal{D}\left(f-\omega\left(f\right)\right)\right)\\
  & =\mathcal{D}^{-1}\left(\mathcal{D}f-\mathcal{D}\left(\omega\left(f\right)\right)\right)
-\end{aligned}$$ 由于 $\omega\left(f\right)\in\ker\mathcal{D}$，因此
+\end{aligned}$$
+
+由于 $\omega\left(f\right)\in\ker\mathcal{D}$，因此
 $\mathcal{D}\left(\omega\left(f\right)\right)=0$，因此：
 
-$$f-\omega\left(f\right)=\mathcal{D}^{-1}\left(\mathcal{D}f\right)$$ ◻
+$$f-\omega\left(f\right)=\mathcal{D}^{-1}\left(\mathcal{D}f\right)$$ 
+
+◻
 
 ---
 引入 Lemma 2 后，现在我们证明广义 Taylor 展开.
 根据 Lemma 2，$\forall f\in X$，有：
 
-$$f=\omega\left(f\right)+\mathcal{D}^{-1}\left(\mathcal{D}f\right)$$
+$f=\omega\left(f\right)+\mathcal{D}^{-1}\left(\mathcal{D}f\right)$
 
 将上式的 $f$ 替换为 $\mathcal{D}f$，有：
 
@@ -167,7 +169,7 @@ Taylor 展开.
 
 常见的 Taylor 展开是广义 Taylor 展开的一种特殊情况. 只需要取：
 
--   $X:C^{\infty}\left(\mathbb{R}\right)$
+-   $X:C^{\infty}\left(\mathbb{R}\right)$.
 
 -   $\mathcal{D}:\mathrm{d}/\mathrm{d}x$（一阶微分算子）
 
@@ -175,19 +177,21 @@ Taylor 展开.
 
 -   $\omega\left(f\right):$ 函数 $f$ 在某一点 $x_{0}$ 的取值
 
-我们很容易验证算符 $\mathcal{D}^{-1}$：
+我们很容易构造算符 $\mathcal{D}^{-1}$：
 
 $$\mathcal{D}^{-1}\left(f\left(x\right)\right)=\int_{x_{0}}^{x}f\left(t\right)\mathrm{d}t$$
 
-符合条件. 现在我们来构建展开的各项：
+现在我们来计算展开的各项：
 
 -   $n=0:$
     $$\mathcal{D}^{-0}\circ\omega\circ\mathcal{D}^{0}f=\omega\left(f\right)=f\left(x_{0}\right)$$
 
 -   $n=1:$
+
     $$\mathcal{D}^{-1}\circ\omega\circ\mathcal{D}f=\mathcal{D}^{-1}\circ\omega f'=\mathcal{D}^{-1}f'\left(x_{0}\right)=f'\left(x_{0}\right)\left(x-x_{0}\right)$$
 
 -   $n=2:$
+
     $$\mathcal{D}^{-2}\circ\omega\circ\mathcal{D}^{2}f=\mathcal{D}^{-2}\circ\omega f''=\mathcal{D}^{-2}f''\left(x_{0}\right)=\frac{1}{2}f''\left(x_{0}\right)\left(x-x_{0}\right)^{2}$$
 
 以此类推，有：
@@ -205,7 +209,7 @@ $$f\left(x\right)=\sum_{k=0}^{\infty}\frac{1}{k!}f^{\left(k\right)}\left(x_{0}\r
 Almansi 分解将一个普通的函数分解为一系列"越来越不平滑"的调和函数的和.
 取：
 
--   $X:C^{\infty}\left(\Omega\right)$
+-   $X:C^{\infty}\left(\Omega\right)$.
 
 -   $\mathcal{D}:\nabla^{2}$（Laplace 算子）
 
