--- a/_posts/2025-7-30-广义Taylor展开.md
+++ b/_posts/2025-7-30-广义Taylor展开.md
@@ -49,9 +49,7 @@ $X$ 的拓扑性质以及算子 $\mathcal{D}$ 和 $\omega$ 的度量性质[^1].
 
 <div class="notice--info" markdown="1">
 $\mathbf{Lemma 1}:$
-$\forall f\in X$，使得 $\omega\left(f\right)=0$，则有：
-
-$$f=\mathcal{D}^{-1}\left(\mathcal{D}f\right)$$
+$\forall f\in X$，使得 $\omega\left(f\right)=0$，则有：$f=\mathcal{D}^{-1}\left(\mathcal{D}f\right)$
 </div>
 
 $\mathbf{Proof}.$ 记
@@ -128,7 +126,7 @@ $\mathcal{D}\left(\omega\left(f\right)\right)=0$，因此：
 
 $$f-\omega\left(f\right)=\mathcal{D}^{-1}\left(\mathcal{D}f\right)$$ 
 
-◻
+综上，原引理成立. ◻
 
 ---
 引入 Lemma 2 后，现在我们证明广义 Taylor 展开.
@@ -183,14 +181,15 @@ $$\mathcal{D}^{-1}\left(f\left(x\right)\right)=\int_{x_{0}}^{x}f\left(t\right)\m
 
 现在我们来计算展开的各项：
 
--   $n=0:$
+-   $n=0$：
+
     $$\mathcal{D}^{-0}\circ\omega\circ\mathcal{D}^{0}f=\omega\left(f\right)=f\left(x_{0}\right)$$
 
--   $n=1:$
+-   $n=1$：
 
     $$\mathcal{D}^{-1}\circ\omega\circ\mathcal{D}f=\mathcal{D}^{-1}\circ\omega f'=\mathcal{D}^{-1}f'\left(x_{0}\right)=f'\left(x_{0}\right)\left(x-x_{0}\right)$$
 
--   $n=2:$
+-   $n=2$：
 
     $$\mathcal{D}^{-2}\circ\omega\circ\mathcal{D}^{2}f=\mathcal{D}^{-2}\circ\omega f''=\mathcal{D}^{-2}f''\left(x_{0}\right)=\frac{1}{2}f''\left(x_{0}\right)\left(x-x_{0}\right)^{2}$$
 
@@ -252,7 +251,7 @@ Almansi 分解.
 
 ### 按旋度算子的 Taylor 展开
 
-（这里我并不清除这个展开有什么实际的作用，也不知是否有名称 QAQ）
+（这里我并不清除这个展开有什么实际的作用，也不知是否有正式名称 QAQ）
 
 我们取：
 
