--- a/_posts/2025-7-30-广义Taylor展开.md
+++ b/_posts/2025-7-30-广义Taylor展开.md
@@ -122,9 +122,11 @@ f-\omega\left(f\right) & =\mathcal{D}^{-1}\left(\mathcal{D}\left(f-\omega\left(f
 \end{aligned}$$
 
 由于 $\omega\left(f\right)\in\ker\mathcal{D}$，因此
-$\mathcal{D}\left(\omega\left(f\right)\right)=0$，因此：
+$\mathcal{D}\left(\omega\left(f\right)\right)=0$，故：
 
-$$f-\omega\left(f\right)=\mathcal{D}^{-1}\left(\mathcal{D}f\right)$$ 
+$$
+f-\omega\left(f\right)=\mathcal{D}^{-1}\left(\mathcal{D}f\right)
+$$ 
 
 综上，原引理成立. ◻
 
