--- a/_posts/2025-9-9-LRL推导库伦散射.md
+++ b/_posts/2025-9-9-LRL推导库伦散射.md
@@ -50,7 +50,7 @@ $$\begin{aligned}
 借助 LRL 矢量，我们可以非常快速方便地推出库伦散射公式（无需使用任何积分）
 设入射动量为 $\boldsymbol{p}_{1}$，出射动量为
 $\boldsymbol{p}_{2}$，由能量守恒，显然
-$\left|\boldsymbol{p}_{1}\right|=\left|\boldsymbol{p}_{2}\right|\coloneqq p_{0}$.
+$\left|\boldsymbol{p}_{1}\right|=\left|\boldsymbol{p}_{2}\right| = p_{0}$.
 入射的位矢和动量平行（入射时方向相反，出射方向相同），因此入射的 LRL
 矢量 $\boldsymbol{A}_{1}$，出射 LRL 矢量 $\boldsymbol{A}_{2}$ 分别为：
 
@@ -66,6 +66,10 @@ $$mk\left(\hat{\boldsymbol{p}_{1}}+\hat{\boldsymbol{p}_{2}}\right)=\left(\boldsy
 即：
 
 $$\frac{mk}{p_{0}}\left(\hat{\boldsymbol{p}_{1}}+\hat{\boldsymbol{p}_{2}}\right)=\left(\hat{\boldsymbol{p}_{2}}-\hat{\boldsymbol{p}_{1}}\right)\times\boldsymbol{L}$$
+
+<p align="center">
+<img src="/pic/2025-9-9/LRL.jpg" width="70%" >
+</p>
 
 根据入射出射动量的角度关系，有：
 
