--- a/_thoughts/2026-1-30-随想页面的随想.md
+++ b/_thoughts/2026-1-30-随想页面的随想.md
@@ -1,9 +1,11 @@
 ---
 title: 关于这个随想页面的随想
-collection: thoughts
 ---
 
 <!-- more -->
 
-这是一个简单的随想
+感觉需要一个页面来记录一些短小的零碎的想法、思考等，这些零碎的内容感觉不太适合写成完整的 Blog 文章，因此就新建了这个随想页面记录，方便之后的回顾和整理.
 
+从另一方面也可以增加网站的更新频率（雾），之前很多时候都只更新了 Note 而没有更新网站本身，使得看起来网站的更新频率不高.
+
+目前这个页面还是直接搬用了 Blog  文章的页面布局，也许对于随想之类的短小的内容需要设计一个更好的页面布局.
