--- a/_posts/2025-6-23-从零开始的Maxwell方程组.md
+++ b/_posts/2025-6-23-从零开始的Maxwell方程组.md
@@ -120,7 +120,7 @@ J_{e} & \equiv\left(\mathcal{J}_{1},\mathcal{J}_{2},\mathcal{J}_{3}\right)=\left
 
 上式中的第二个式子又可以改写成：
 
-$$\frac{\partial\boldsymbol{E}}{\partial t}-\nabla\times\boldsymbol{B}=J_{e}$$
+$$\nabla\times\boldsymbol{B}-\frac{\partial\boldsymbol{E}}{\partial t}=J_{e}$$
 
 综上所述，我们导出了完整的 Maxwell 方程组：
 
@@ -131,6 +131,6 @@ $$\begin{aligned}
 \end{cases}\\
 \delta F=\mathcal{J} & \Longrightarrow\begin{cases}
 \nabla\cdot\boldsymbol{E}=\rho\\
-\frac{\partial\boldsymbol{E}}{\partial t}-\nabla\times\boldsymbol{B}=J_{e}
+\nabla\times\boldsymbol{B}-\frac{\partial\boldsymbol{E}}{\partial t}=J_{e}
 \end{cases}
 \end{aligned}$$
