--- a/_posts/2026-2-10-NixOS打包过程.md
+++ b/_posts/2026-2-10-NixOS打包过程.md
@@ -12,9 +12,60 @@ tags:
 
 <!-- more -->
 
+## 打包的基本流程
+
 最近将笔记本的 EndeavourOS 替换成了 NixOS，NixOS 这一种不可变的无状态的具有函数式编程的特点的系统非常和我胃口. 不过由于其不可变的特性，也使得其不遵守 FHS 标准，它的 `/lib` 或 `/lib64` 目录下不存在类似 `ld-linux-x86-64.so.2` 之类的库文件动态加载器，更不存在 `libc.so` 之类的库文件。因此，除非静态链接，否则为其它 Linux 下编译的二进制文件将不能直接在 NixOS 上运行.
 
 好在官方的 Nixpkgs 已经提供了大量软件的打包，很多软件都能直接写进配置文件中安装. 但总有少数软件并没有被 Nixpkgs 收录，这时就需要自己动手打包了.
 
+在 Nix 中，所有的打包工作通常都是基于 `stdenv.mkDerivation` 这个标准环境进行的。它预定义了一套标准构建的流程. 当运行 `nix-build` 时，Nix 会创建一个完全隔离的沙盒环境，构建中使用的所有软件都需要在 `buildInputs` 和 `nativeBuildInputs` 里声明. 同时，整个构建过程除了 `fetchurl` / `fetchgit` 等固定哈希的下载步骤外，是无法访问网络的. 这些要求确保了构建的可复现性.
+
+一个比较完整的构建流程如下：
+
+- unpackPhase：解压源码或压缩包到临时目录
+- patchPhase：针对软件的路径硬编码打补丁
+- configurePhase：准备构建系统，运行 cmake 配置等
+- buildPhase：编译
+- installPhase：安装，将所有编译好的文件放在 `$out` 里. 只有在 `$out` 里的文件会被保留
+- fixupPhase：编译后处理，修正动态库链接
+
+以上每一个步骤都有默认的实现，`stdenv` 会自动按顺序执行每一个步骤，同时也可以根据需要重写它们.
+
+一个简单的模板如下：
+
+```nix
+```nix
+{ pkgs ? import <nixpkgs> {} }:
+
+pkgs.stdenv.mkDerivation rec {
+  pname = "app";
+  version = "0.0.1";
+
+  src = pkgs.fetchFromGitHub {
+    owner = "username";
+    repo = "repo-name";
+    rev = "v${version}";
+    sha256 = "0000000000000000000000000000000000000000000000000000";
+  };
+
+  nativeBuildInputs = [
+    # 打包需要的构建工具 
+  ];
+
+  buildInputs = [
+    # 运行时需要的库
+  ];
+  
+  # 重写步骤 
+  installPhase = ‘’
+    # 以 installPhase 为例子. 安装时的命令.
+  ‘’；
+
+}
+```
+```
 
 
+## 打包文件解析
+
+这里我希望安装笔记软件 [SpeedyNote](https://github.com/alpha-liu-01/SpeedyNote)，这个软件比较新，目前还没有被 Nixpkgs 收入. 一般而言，对于开源软件，一般打包脚本会从源码编译. 这里我偷懒直接使用 `.deb` 文件进行构建.
