--- a/_posts/2026-2-10-NixOS打包过程.md
+++ b/_posts/2026-2-10-NixOS打包过程.md
@@ -34,7 +34,6 @@ tags:
 一个简单的模板如下：
 
 ```nix
-```nix
 { pkgs ? import <nixpkgs> {} }:
 
 pkgs.stdenv.mkDerivation rec {
@@ -63,9 +62,89 @@ pkgs.stdenv.mkDerivation rec {
 
 }
 ```
+
+如果使用 Home Manager，则还需要加一层：
+
+```nix
+{ pkgs, ... }:
+let
+  app = pkgs.stdenv.mkDerivation rec { ... };
+in
+{
+  home.packages = [ app ];
+}
 ```
 
+从而将构建好的包加入 `home.packages` 中.
 
 ## 打包文件解析
 
 这里我希望安装笔记软件 [SpeedyNote](https://github.com/alpha-liu-01/SpeedyNote)，这个软件比较新，目前还没有被 Nixpkgs 收入. 一般而言，对于开源软件，一般打包脚本会从源码编译. 这里我偷懒直接使用 `.deb` 文件进行构建.
+
+### 软件基本信息和文件下载
+
+```nix
+pname = "speedynote";
+version = "1.2.1";
+src = pkgs.fetchurl {
+  url= "https://github.com/.../speedynote_1.2.1-1_amd64.deb";
+  sha256 = "...";
+};
+```
+
+打包软件的基本信息和构建需要的文件，不做过多解释.
+
+### 构建依赖
+
+```nix
+nativeBuildInputs = with pkgs; [
+  dpkg
+  autoPatchelfHook
+  qt6.wrapQtAppsHook
+];
+```
+
+这里 `dpkg` 是用来提取 `.deb` 的.
+
+`autoPatchelfHook` 是打包的核心工具，它会自动扫描二进制文件，把原本指向 `/usr/lib` 的动态库链接，替换为 NixOS 中对应的库路径（即下面 `buildInputs` 里提供的库）.
+
+`qt6.wrapQtAppsHook` 则专门用于 Qt 程序，它会包裹二进制文件，设置 `QT_PLUGIN_PATH` 等环境变量，防止程序启动时报错.
+
+### 运行时依赖
+
+```nix
+buildInputs = with pkgs; [
+  stdenv.cc.cc.lib zlib qt6.qtbase ... libjpeg8 gumbo mujs ...
+];
+```
+
+运行软件需要的动态库，不做过多解释.
+
+### 解压与安装
+
+```nix
+unpackPhase = "dpkg -x $src .";
+
+installPhase = ''
+  mkdir -p $out
+  cp -r usr/* $out/
+  mkdir -p $out/lib
+  
+  ln -sf ${pkgs.gumbo}/lib/libgumbo.so $out/lib/libgumbo.so.2
+  ln -sf ${pkgs.mujs}/lib/libmujs.so $out/lib/libmujs.so.3
+'';
+```
+
+这里 `unpackPhase` 使用 `dpkg` 解压，之后在 `installPhase` 将解压的文件复制到 `$out`.
+
+这里我们需要针对打包的路径进行一个修复. 原版 `.deb` 中的二进制文件被硬编码为寻找 `libgumbo.so.2` 和 `libmujs.so.3`，遵循 Debian 的命名习惯. 但 Nixpkgs 中的 `gumbo` 和 `mujs` 的名称是 `libgumbo.so` 等. 这里我们手动在 `$out/lib` 下创建名为 `.so.2` 和 `.so.3` 的假名，强行指向 Nixpkgs 里的真实库文件.
+
+### 后期修复
+
+```nix
+postFixup = ''
+  patchelf --add-rpath $out/lib $out/bin/speedynote
+'';
+```
+
+这里我们使用 `autoPatchelfHook` 自动修复路径，注意需要添加我们手动引入的 `$out/lib`.
