--- a/_posts/2026-2-10-NixOS打包过程.md
+++ b/_posts/2026-2-10-NixOS打包过程.md
@@ -44,7 +44,7 @@ pkgs.stdenv.mkDerivation rec {
     owner = "username";
     repo = "repo-name";
     rev = "v${version}";
-    sha256 = "0000000000000000000000000000000000000000000000000000";
+    sha256 = "sha256sum"; # 下载文件的哈希值
   };
 
   nativeBuildInputs = [
