--- a/_thoughts/2026-2-15-网站更新02.md
+++ b/_thoughts/2026-2-15-网站更新02.md
@@ -8,15 +8,10 @@ title: 网站更新(02)
 
 另外也顺便重写了 Notice 的样式，以及夜间的情况，也就是下面这种：
 
-> [!NOTE]
-> 看看 NOTE 框
+看看 NOTICE 框
+{: .notice}
 
-> [!IMPORTANT]
-> 看看 IMPORTANT 框
+看看 INFO 框
+{: .notice--info}
 
-不过感觉夜间的透明度还是需要调整. 同时也支持了 GitHub 的 Notice 写法，即：
-
-```markdown
-> [!NOTE]
-> 这是一个 NOTE
-```
+不过感觉夜间的透明度还是需要调整.
