--- a/_thoughts/2026-2-16-在手机本地运行Steam游戏.md
+++ b/_thoughts/2026-2-16-在手机本地运行Steam游戏.md
@@ -8,6 +8,6 @@ title: 在手机本地运行 Steam 游戏
 
 得益于 box86, box64, dxvk, proton 等转义层的出现和完善，以及手机性能的提升和高通的开源驱动，现在手机完全可以通过以上的兼容层转义运行各类 x86 游戏. 而 GameNative 相当于在以上基础上简化安装流程，并做好 Steam 云同步和虚拟按键映射，基本上安装登录 Steam 就能直接开用（当然针对不同游戏可能需要调兼容层设置）. 可惜的是目前在手机上得到的成就不能同步到 Steam.
 
-除了 Chill With You，我还经常在上面跑 Brotato，感觉近年可能在手机上开 Steam 时长比电脑还长.
+除了 Chill With You，我还经常在上面跑 Brotato，感觉今年可能在手机上开 Steam 时长比电脑还长.
 
 赞美 box86/64, dxvk, proton.
